# cpuidrs

./: .gitignore  Cargo.toml  build.rs  readme.md
.github/workflows/: ci.yml
licenses/: MIT.txt
src/: arm.rs  bare.rs  common.rs  lib.rs  riscv.rs  x86.rs
src/c/: cpuid.c
tests/: cpuid_detect.rs  tests.rs
