[package]
name = "cpuid"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
baremetal = []

[dependencies]
# OS integration: libc for Unix, winapi for Windows
libc = "0.2"
winapi = { version = "0.3", features = ["sysinfoapi", "processthreadsapi", "winbase"] }
num_cpus = "1.13"
raw-cpuid = "9.0"

[dev-dependencies]
# For testing on hosted targets
